2024-09-19T01:41:18Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/10932928056 # 423
* notice: Stats Output Repository: https://github.com/andry81-stats/github-action-extensions--gh-stats/commits?branch=master&time_zone=utc&until=2024-09-19
* notice: last 14d: unq all: 3 3
* notice: prev accum: outdated-unq outdated-all / unq all: 200 231 / 202 233
* notice: next accum: outdated-unq outdated-all / unq all: 200 231 / 203 234
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2024-09-18]

2024-09-16T01:45:28Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/10876229194 # 420
* notice: Stats Output Repository: https://github.com/andry81-stats/github-action-extensions--gh-stats/commits?branch=master&time_zone=utc&until=2024-09-16
* notice: last 14d: unq all: 2 2
* notice: prev accum: outdated-unq outdated-all / unq all: 200 231 / 201 232
* notice: next accum: outdated-unq outdated-all / unq all: 200 231 / 202 233
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2024-09-15]

2024-09-15T00:37:39Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/10866707392 # 419
* notice: Stats Output Repository: https://github.com/andry81-stats/github-action-extensions--gh-stats/commits?branch=master&time_zone=utc&until=2024-09-15
* notice: last 14d: unq all: 1 1
* notice: prev accum: outdated-unq outdated-all / unq all: 199 230 / 200 231
* notice: next accum: outdated-unq outdated-all / unq all: 200 231 / 201 232
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2024-06-22] / [2024-09-14]

2024-06-23T00:31:42Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/9629385507 # 335